--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
 
     # Generates the snake  
-      - uses: Platane/snk@main
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: Nanda-Kiran-Royal
@@ -39,10 +39,10 @@ jobs:
 
       # Push the changes
       - name: Push changes
-        uses: ad-m/github-push-action@main
+        uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+          branch: master
           force: true
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
